# avena

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTEXT.md  HISTORY.md  README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-three-layer-pipeline-architecture.md  0003-passive-graph-model-with-signals.md  0004-stable-portref-addressing.md  0005-centralized-typed-connection-rules.md  0006-dynamic-node-catalog-from-gstreamer-registry.md  0007-gstreamer-optional-build-dependency.md  0008-gstreamer-mapping-in-execution-backend.md  0009-abk-versioned-json-persistence.md  0010-time-range-as-file-source-property.md
src/: CMakeLists.txt  main.cpp
src/app/: InfoPanel.cpp  InfoPanel.h  MainWindow.cpp  MainWindow.h  NodePalette.cpp  NodePalette.h  PropertiesPanel.cpp  PropertiesPanel.h  TemplateLibrary.cpp  TemplateLibrary.h  TemplatePanel.cpp  TemplatePanel.h
src/canvas/: ConnectionItem.cpp  ConnectionItem.h  DragTypes.h  NodeEditorScene.cpp  NodeEditorScene.h  NodeEditorView.cpp  NodeEditorView.h  NodeItem.cpp  NodeItem.h  PortItem.cpp  PortItem.h
src/engine/: MediaPreview.cpp  MediaPreview.h  PipelineRunner.cpp  PipelineRunner.h
src/graph/: Connection.h  Graph.cpp  Graph.h  GraphSerializer.cpp  GraphSerializer.h  Node.h  NodeCatalog.cpp  NodeCatalog.h  Port.h  Types.cpp  Types.h
src/media/: ElementProperties.cpp  ElementProperties.h  MediaInfo.cpp  MediaInfo.h
